cmake_minimum_required(VERSION 2.8.3)
project(seneka_srv)

# set build type
set(CMAKE_BUILD_TYPE Release)

## Find catkin macros and libraries
## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
## is used, also find other catkin packages
find_package(catkin REQUIRED COMPONENTS
  roscpp
  std_msgs
  message_generation
)

#######################################
## Declare ROS messages and services ##
#######################################

## Generate services in the 'srv' folder
add_service_files(
  DIRECTORY
    srv
  FILES
    backLightCompensation.srv
    debugScreen.srv
    focusAuto.srv
    focusNearLimit.srv
    focus.srv
    infraredCutFilterAuto.srv
    infraredCutFilter.srv
    noiseReduction.srv
    pictureEffect.srv
    statusDisplay.srv
    streaming.srv
    titleDisplay.srv
    titleText.srv
    videoMode.srv
    zoom.srv
)

## Generate added messages and services with any dependencies listed here
generate_messages(
  DEPENDENCIES
  std_msgs
)

###################################
## catkin specific configuration ##
###################################
## The catkin_package macro generates cmake config files for your package
## Declare things to be passed to dependent projects
## INCLUDE_DIRS: uncomment this if you package contains header files
## LIBRARIES: libraries you create in this project that dependent projects also need
## CATKIN_DEPENDS: catkin_packages dependent projects also need
## DEPENDS: system dependencies of this project that dependent projects also need
catkin_package(
  CATKIN_DEPENDS
    roscpp
    message_runtime
)

